--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ hilt = "2.51"
 ksp = "1.9.24-1.0.20"
 retrofit = "2.11.0"
 gson = "2.11.0"
+coil = "2.6.0"
 
 [libraries]
 #Core
@@ -26,9 +27,10 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 #DI - Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
-#Network - Retrofit + Gson
+#Network - Retrofit + Gson + Coil
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
